# ROLLER

./: .gitignore  CMakeLists.txt  FatalDecomp.vcxproj  FatalDecomp.vcxproj.filters  LICENSE.md  Makefile  README.md  ROLLER.rc  ROLLER.sln  ROLLER.vcxproj  ROLLER.vcxproj.filters  build.zig  build.zig.zon  compile_flags.txt  mise.toml  resource.h  wildmidi.cfg
.github/workflows/: build.yml  ci.yml  nightly-build.yml
.mise/tasks/: build.py  build.sh
DONS/SOSDIGIW/SOSLIB/SRC/: soscaps.c  soscntl.c  soscntl.h  sosdata.c  sosdata.h  sosdetec.c  sosdone.c  soserr.c  sosinit.c  sosload.c  sosplyng.c  sosrate.c  sosstart.c  sostmr.c
DONS/SOSMIDIW/SOSMLIB/SRC/: sosmcaps.c  sosmcbck.c  sosmdata.c  sosmdata.h  sosmdigi.c  sosmdone.c  sosmdq.c  sosminit.c  sosmins.c  sosmload.c  sosmpaus.c  sosmptr.c  sosmsong.c  sosmst.c  sosmtmpo.c  sosmtmr.c  sosmwave.c  sosmwave.h
GSSCOMMS/: serial.c
NETSRC/SRC/: ipx.c  netbios.c  netnow.c
PROJECTS/ROLLER/: 3d.c  3d.h  Types.h  building.c  building.h  car.c  car.h  carplans.c  carplans.h  cdx.c  cdx.h  colision.c  colision.h  comms.c  comms.h  config.h  control.c  control.h  date.c  date.h  drawtrk3.c  drawtrk3.h  engines.c  engines.h  frontend.c  frontend.h  func2.c  func2.h  func3.c  func3.h  function.c  function.h  graphics.c  graphics.h  horizon.c  horizon.h  loadtrak.c  loadtrak.h  mouse.c  mouse.h  (+27 more)
PROJECTS/ROLLER/data/: AutoPlans.h  CarDesigns.h  xauto_anms.h  xauto_coords.h  xauto_pols.h
images/: demo.webm
midi/: wildmidi.cfg
scripts/: build.py
